--- a/index.html
+++ b/index.html
@@ -1,45 +1,98 @@
-<!DOCTYPE html>
-<head> 
-	<title> Honest Burgers </title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-	<link href="stylehb.css" rel = "stylesheet" type="text/css">
+<!--
+Design by TEMPLATED
+http://templated.co
+Released for free under the Creative Commons Attribution License
+
+Name       : LawnLike 
+Description: A two-column, fixed-width design with dark color scheme.
+Version    : 1.0
+Released   : 20131202
+
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<meta name="keywords" content="restaurant, burgers" />
+<meta name="description" content="restaurant" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+
+<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
 <body>
-<h1>Honest Burgers</h1>
-
-<!-- photo credit: <a href="http://www.flickr.com/photos/130132803@N07/18778845628">Grass Fed</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by/2.0/">(license)</a> --> 
-
-<img src ="ScrabbleGrassFed.jpg" alt="grass fed" width = 150 height = 150>
-
-<!-- photo credit: <a href="http://www.flickr.com/photos/26214672@N00/9783761024">DSC_5704</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by/2.0/">(license)</a> -->
-
-<img src ="CowsEatingGrass.jpg" alt ="grass fed cows">
-<div class="line">
-	<nav>
-		<p class="nav-text">
-
-		<p><a href="menuhb.html">Explore the Menu</a></p>
-
-
-		<p><a href="farmshb.html">Learn about Local Farms</a></p>
-
-
-		<p><a href="photogalleryhb.html">Photo Gallery</a></p>
-
-<br>
-<br>
-<br>
-
- <p>Honest Burgers is proud to partner with local farms to provide a truly authentic "Farm to Table" experience. 
- </p>
-
- <!--Include information targeted to the health conscious community-->
-<br>
-<br>
-<div id="footer">
-		<p>179 Lincoln Street, Boston, MA 02111 * (888) 425-5557 * info@honestburgers.com </p> 
-		<p>&copy Copyright 2015</p>
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+			<h1><span class="fa fa-bolt"></span><a href="#">Honest Burgers</a></h1>
+		</div>
+		<div id="menu">
+			<ul>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Home</a></li>
+				<li><a href="menuhb.html" accesskey="2" title="">Menu</a></li>
+				<li><a href="abouthb.html" accesskey="3" title="">About</a></li>
+				<li><a href="farmshb.html" accesskey="4" title="">Farms</a></li>
+				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+			</ul>
+		</div>
+	</div>
 </div>
+<div id="header-featured">
+	<div id="banner-wrapper">
+		<div id="banner" class="container">
+			<h2>Simply Sustainable</h2>
 
+<!--                
+The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p> -->
+                
+			<a href="#" class="button">ENJOY!</a>
+		</div>
+	</div>
+</div>
+<div id="wrapper">
+	<div id="featured-wrapper">
+		<div id="featured" class="extra2 margin-btm container">
+			<div class="main-title">
+				<h2>Honest Burgers</h2>
+				<span class="byline"><p>A simple, sustainable delight for your healthy lifestyle. </p></span> </div>
+	
+			<div class="ebox1"> <span class="fa fa-pagelines"></span>
+				<div class="title">
+					<h2>Menu</h2>
+			<!--		<span class="byline">Simple, savory selections</span> --> 
+                </div>
+				<a href="menuhb.html" class="button">EXPLORE</a> </div>
+			<div class="ebox2"> <span class="fa fa-anchor"></span>
+				<div class="title">
+					<h2>Sustainable Solutions</h2>
+					<!-- <span class="byline"> </span> --> 
+                </div>
+				<a href="#" class="button">Simplicity</a> </div>
+		</div>
+		<div class="extra2 container">
+			<div class="ebox1"> <span class="fa fa-puzzle-piece"></span>
+				<div class="title">
+					<h2>Farm Stories</h2>
+				<!--	<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> -->
+                </div>
+
+				<a href="farmshb.html" class="button">STORIES</a> </div>
+			<div class="ebox2"> <span class="fa fa-comments-o"></span>
+				<div class="title">
+					<h2>Meet Stacey</h2>
+			<!--		<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> -->
+                </div>
+			<!--	<p>Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. </p> -->
+				<a href="abouthb.html" class="button">Chat</a> </div>
+		</div>
+	</div>
+</div>
+<div id="copyright" class="container">
+	<p>&copy; Honest Burgers 2015. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Design adapted by <a href="http://www.moyersphd.com"> Stephanie Moyers </a>.</p> 
+</div>
 </body>
+</html>
